test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidArgumentTypesMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__moveto' has incorrect argument types
	void __moveto(unused int a, unused int b) noexcept { }
}

// CHECK: 1 error generated.
